[project]
name = "job-applications"
version = "0.1.0"
description = ""
authors = [
    {name = "Jailton Silva",email = "jss1@ifal.edu.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "job_applications", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
